--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "user_details",
   "version": "0.1.0",
   "private": true,
-    "dependencies": {
+  "homepage": "https://rupeshwadbude.github.io/Reduxdemo",
+  "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -23,7 +24,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-      "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
